--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -33,7 +33,7 @@
     <form class="form-inline my-2 my-lg-0">
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-      <a class="navbar-brand" href="#">Artna</a>
+      <a class="navbar-brand artnaLogoMenu" href="#">Artna</a>
     </form>
   </div>
 </nav>
