--- a/src/app/components/log-in/phone-number-client/phone-number-client.component.scss
+++ b/src/app/components/log-in/phone-number-client/phone-number-client.component.scss
@@ -6,20 +6,14 @@ $fontColor: #000;
 .row { 
     margin: 0; height: 94%; 
     .formColumn {
+        height: 100%;
         display: flex;
         align-items: center;
-        background-image: url("../../../../assets/Backgrounds/coverNum.png");
+        background-image: url("../../../../assets/Backgrounds/coverNumber.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         padding: 0;
-    }
-    .videoColumn { 
-        padding: 0;
-        video {
-            object-fit: cover;
-            width: 100%; height: 100%;
-        }
     }
 }
 .modal {
