--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,7 +10,10 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li> -->
       <li class="nav-item">
-        <a class="btn btn-outline-dark mr-sm-2" href="#">التسجيل كفنان</a>
+        <a class="btn btn-outline-dark mr-sm-2" *ngIf="!userStatus" (click)="onChangeUserStatus()">التسجيل كفنان</a>
+      </li>
+      <li class="nav-item">
+        <a class="btn btn-outline-dark mr-sm-2" *ngIf="userStatus" (click)="onChangeUserStatus()">التسجيل كعميل</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-dark mr-sm-2" href="#">التسجيل كمقهي فني</a>
